# eupol

./: .gitignore  README.md  catschemes.json  pyproject.toml  roots.xml  temp.py  topic-tree.txt
assets/images/: nuts-notebook.html
eupol/: __init__.py
eupol/download/: __init__.py  _path.py  nuts.py  paths.py  text.py  utils.py
eupol/download/sdmx/: __init__.py  async.py  base.py  datasets.py  topicfilter.py
eupol/download/stats/eu/: __init__.py  _bulk_dl_pars.py  async.py  tfilter.py  tprogress.py
eupol/plot/: interactive.py
tests/unittest/: test_filter.py  test_tmpcache.py  test_tokenize.py
