[tool.poetry]
name = "eupol"
version = "0.1.0"
description = ""
authors = ["Arno's Stuff <bcda0276@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
folium = "^0.13.0"
requests = "^2.28.1"
geopandas = "^0.12.1"
pyarrow = "^10.0.1"
fastparquet = "^2022.11.0"
rich = "^12.6.0"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
notebook = "^6.5.2"
nbconvert = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
